tekst.txt

-------------- Build: Debug in IPv4Calc (compiler: GNU GCC Compiler)---------------

g++ -Wall -fexceptions -g  -c /home/master/Source/IPv4Calc/main.cpp -o obj/Debug/main.o
g++  -o bin/Debug/IPv4Calc obj/Debug/main.o
/home/master/Source/IPv4Calc/main.cpp: In function ‘int main(int, char**)’:
/home/master/Source/IPv4Calc/main.cpp:150:43: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const char*’
  150 |                  NumberOfSubnets = strtol(NOS,error_strtol, 10);
      |                                           ^~~
      |                                           |
      |                                           std::string {aka std::__cxx11::basic_string<char>}
In file included from /usr/include/c++/13/cstdlib:79,
                 from /usr/include/c++/13/ext/string_conversions.h:43,
                 from /usr/include/c++/13/bits/basic_string.h:4109,
                 from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /home/master/Source/IPv4Calc/main.cpp:1:
/usr/include/stdlib.h:177:48: note:   initializing argument 1 of ‘long int strtol(const char*, char**, int)’
  177 | extern long int strtol (const char *__restrict __nptr,
      |                         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/home/master/Source/IPv4Calc/main.cpp:151:37: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
  151 |                  if (error_strtol = "\0")
      |                                     ^~~~
/home/master/Source/IPv4Calc/main.cpp:151:35: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
  151 |                  if (error_strtol = "\0")
      |                      ~~~~~~~~~~~~~^~~~~~
Process terminated with status 1 (0 minute(s), 1 second(s))
1 error(s), 2 warning(s) (0 minute(s), 1 second(s))

